--- a/collection.html
+++ b/collection.html
@@ -26,7 +26,7 @@
 
       
        
-<div class="coumn"> 
+<div class="column"> 
   <div class="row">
     <img src="images/7daystodie.jpg" alt="7 Days to Die" style="width:200px;height:150px;">
     <img src="images/aragami.jpg" alt="Aragami" style="width:200px;height:150px;">
@@ -84,7 +84,6 @@
     <img src="images/totalwar2.png" alt="Total War Warhammer 2" style="width:200px;height:150px;">
     <img src="images/vermin.jpg" alt="Vermintde" style="width:200px;height:150px;">
     <img src="images/wot.png" alt="World of Tanks" style="width:200px;height:150px;">
-
  </div>
 
 
